[project]
name = "trm-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clu>=0.0.12",
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "flax>=0.12.1",
    "jax>=0.8.1",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.30",
    "simple-parsing>=0.1.7",
    "tensorflow>=2.20.0",
]
